# ini-ninja

./: Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: get.rs  main.rs  set.rs
examples/: simple.rs
examples/ini_files/: simple.ini
examples/ini_files/conan_exiles/: DefaultGame.ini
lib/: Cargo.toml
lib/src/: error.rs  lib.rs  read.rs  readme_tests.rs  write.rs
src/: error.rs  lib.rs  read.rs  readme_tests.rs  test_helpers.rs  write.rs
