[package]
name = "ini-ninja"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
tokio = { version = "1.41.0", default-features = false, features = ["io-util"] }

[dev-dependencies]
tokio = { version = "1.41.0", features = ["io-util", "test-util", "macros"] }
paste = "1.0.15"
assert_matches = "1.5.0"
tempfile = "3.13.0"
